[metadata]
name = ks-affinetools
version = 0.1.0
author = Keisuke Sehara
author_email = keisuke.sehara@gmail.com
description = Tools for performing affine transformations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BraiDyn-BC/python-ks-affinetools
project_urls =
    Bug Tracker = https://github.com/BraiDyn-BC/python-ks-affinetools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    opencv-python

[flake8]
ignore =
    E501
    E221
    E712
